<resources>
    <string name="app_name">安中通</string>
    <string name="about_nav_title_text">关于我们</string>
    <string name="product_description">简单强大便宜的电话软件</string>
    <string name="website">网址</string>
    <string name="website_url">http://www.00244dh.com</string>
    <string name="service_qq_desc">客服QQ</string>
    <string name="service_qq">1622122511</string>
    <string name="product_version">版本号:</string>
    <string name="programming_design">程序设计</string>
    <string name="programming_authors">翟绍虎\t\t路辉\t\t王星</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_ownership">（香港）寰宇通科技有限公司</string>
    <string name="acknowledgement">鸣谢</string>
    <string name="acknowledgement_organizations">合肥优云信息技术有限公司</string>
    <string name="title_activity_chinese_telephone_tab">ChineseTelephoneTabActivity</string>
    <string name="title_setting">SettingActivity</string>
    <string name="title_activity_account_setting">AccountSettingActivity</string>
    <string name="title_activity_account_regist">AccountRegistActivity</string>
    <string name="title_activity_account_forget_psw">AccountForgetPSWActivity</string>
    <string name="title_activity_call_record_history_list_tab_content">CallRecordHistoryListActivity</string>
    <string name="call_record_history_list_tab_title">最近通话</string>
    <string name="call_record_history_list_nav_title">最近通话</string>
    <string name="outgoingCall_imageView_content_description">outgoing call image view</string>
    <string name="recordDetail_imageButton_content_description">call record detail info image button</string>
    <string name="callRecord_callType_imageView_content_description">call type image view</string>
    <string name="yesterdayCallRecord_callDate">昨天</string>
    <string-array name="callRecord_callDate_daysOfWeek">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>
    <string name="callRecord_detailInfo_imageButton_content_description">call record detail info image button</string>
    <string name="callRecord_unknownCalleePhone_alertDialog_message">未知号码，不能拨号</string>
    <string name="callRecord_unknownCalleePhone_alertDialog_reselectBtn_title">重选</string>
    <string name="title_activity_call_record_detail_info">CallRecordDetailInfoActivity</string>
    <string name="call_record_detailinfo_title">详细记录</string>
    <string name="callRecord_detailInfo_contact_avatar_imageView_content_description">call record contact avatar image view</string>
    <string name="callRecord_detailInfo_outgoingCall_callType">呼出电话</string>
    <string name="callRecord_detailInfo_incomingCall_callType">呼入电话</string>
    <string name="callRecord_detailInfo_initiateTime_year">年</string>
    <string name="callRecord_detailInfo_initiateTime_month">月</string>
    <string name="callRecord_detailInfo_initiateTime_day">日</string>
    <string name="callRecord_detailInfo_duration_seconds">秒</string>
    <string name="callRecord_detailInfo_duration_minutes">分钟</string>
    <string name="callRecord_detailInfo_missed_incomingCall">未接听</string>
    <string name="callRecord_detailInfo_cancel_outgoingCall">呼叫取消</string>
    <string name="callRecord_detailInfo_failed_outgoingCall">呼叫失败</string>
    <string name="callRecord_detailInfo_operation4directdial">直拨</string>
    <string name="callRecord_detailInfo_operation4callback">回拨</string>
    <string name="callRecord_detailInfo_operation4sms">短信</string>
    <string name="callRecord_detailInfo_callbackRequest_outgoingCall">回拨请求</string>
    <string name="title_activity_dial_tab_content">DialTabContentActivity</string>
    <string name="dial_tab_title">拨号</string>
    <string name="dialBtn_imageView_content_description">dial button image view</string>
    <string name="dialBtn_imageButton_content_description">dial button image button</string>
    <string name="dial_phone_callee_unknown">未知联系人</string>
    <string name="insertPhone2Contact_modeSelectPopupWindow_titleTextView_text">将号码***添加到哪里？</string>
    <string name="insertPhone2Contact_modeSelectPopupWindow_insert2NewContact">添加到新建联系人</string>
    <string name="insertPhone2Contact_modeSelectPopupWindow_insert2ExistedContact">添加到已有联系人</string>
    <string name="insertPhone2Contact_modeSelectPopupWindow_cancelBtn_title">取消</string>
    <string name="title_activity_contact_list_tab_content">ContactListTabContentActivity</string>
    <string name="contact_search_editText_hint">查找联系人</string>
    <string name="contact_list_tab7nav_title">联系人</string>
    <string name="addressBook_contact_avatar_imageView_content_description">contact avatar image view</string>
    <string name="contact_hasNoPhone_alertDialog_title">此联系人没有号码</string>
    <string name="contact_hasNoPhone_alertDialog_reselectBtn_title">重新选择</string>
    <string name="contactPhone_dialMode_selectPopupWindow_titleTextView_text">请选择拨打模式以联系 ***</string>
    <string name="contactPhone_dialMode_selectPopupWindow_directdialBtn_title">直拨</string>
    <string name="contactPhone_dialMode_selectPopupWindow_callbackBtn_title">回拨</string>
    <string name="contactPhone_dialMode_selectPopupWindow_cancelBtn_title">取 消</string>
    <string name="contactPhone_dialMode_selectPopupWindow_contactPhones_4select">个号码供选择</string>
    <string name="contactPhones_selectPopupWindow_titleTextView_text">选择 ***的电话</string>
    <string name="contactPhones_selectPopupWindow_4directdial">直拨</string>
    <string name="contactPhones_selectPopupWindow_4callback">回拨</string>
    <string name="contactPhones_selectPopupWindow_cancelBtn_title">取 消</string>
    <string name="contactPhone_dialMode_selectPopupWindow_informTextView_text">直拨：网速快时选用，在家一般用直拨，拨号快接通率高资费省</string>
    <string name="contactPhone_dialMode_selectPopupWindow_callback_informTextView_text">回拨：网速慢直播声音断续时选用，出门一般用回拨，通话质量好且省流量</string>
    <string name="title_activity_more_tab_content">MoreTabContentActivity</string>
    <string name="more_tab7nav_title">更多</string>
    <string name="title_activity_outgoing_call">OutgoingCallActivity</string>
    <string name="outgoingCallBG_imageView_content_description">outgoing call background image view</string>
    <string name="outgoing_call_unknownState">未知</string>
    <string name="outgoing_call_trying">正在呼叫中  &#8230;</string>
    <string name="outgoing_call_earlyMedia7RemoteRing">等待对方接听 &#8230;</string>
    <string name="outgoing_call_failed">拨打失败</string>
    <string name="end_outgoing_call">正在结束通话</string>
    <string name="outgoing_call_ended">通话已结束</string>
    <string name="callControllerItem_imageView_content_description">call controller image view</string>
    <string name="callController_contactItem_text">联系人</string>
    <string name="callController_handfreeItem_text">扬声器</string>
    <string name="callController_muteItem_text">静  音</string>
    <string name="callController_keyboardItem_text">键  盘</string>
    <string name="endCall_imageView_content_description">end call image button</string>
    <string name="contactslist_slidingDrawer_handleBtn_text">contacts list sliding drawer handle button text</string>
    <string name="hidecontactslist_button_text">返回</string>
    <string name="hideKeyboard_imageView_content_description">hide keyboard image button</string>
    <string name="sending_request">正在发送请求</string>
    <string name="callbackWaiting_imageView_content_description">callback waiting image view</string>
    <string name="send_callbackCallRequest_succeed">回拨请求已提交</string>
    <string name="send_callbackCallRequest_failed">回拨请求失败</string>
    <string name="callbackWaiting_textView_succeed" formatted="false">回拨请求提交成功，您的号码(%s)稍后将接到回拨电话，接听后系统将为您接通%s。</string>
    <string name="callbackWaiting_textView_failed">回拨请求提交失败。</string>
    <string name="no_enough_money">您的余额不足，请尽快充值。</string>
    <string name="back4waitingCallbackCall_imageButton_content_description">back for waiting callback call image button</string>
    <string name="endCall_imageButton_content_description">end call image button</string>
    <string name="keyboardBtn_imageButton_content_description">keyboard image button</string>
    <string name="detect_new_version" formatted="false">发现新版本%s，\n是否升级？\n本次更新说明：\n%s</string>
    <string name="upgrade">升级</string>
    <string name="menu_settings">更多设置</string>
    <string name="notice_center">消息中心</string>
    <string name="view_notice">查看消息</string>
    <string name="account">账户</string>
    <string name="account_invite_friend_item">分享赚话费</string>
    <string name="account_setting_item">切换账户</string>
    <string name="account_changePSW_item">修改密码</string>
    <string name="account_getPSW_item">找回密码</string>
    <string name="account_charge_item">账户充值</string>
    <string name="my_suites_item">我的套餐</string>
    <string name="search">查询</string>
    <string name="fee_query_item">费率查询</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="setting_dial_item">拨打设置</string>
    <string name="setting_areacode_item">本地区号设置</string>
    <string name="setting_countrycode_item">默认国家号设置</string>
    <string name="setting_setup_item">启动设置</string>
    <string name="setting_set_auth_number">回拨号码设置</string>
    <string name="setting_logout_item">注销登录并退出</string>
    <string name="help">帮助</string>
    <string name="help_item">系统帮助及资费查询</string>
    <string name="help_update_item">软件升级</string>
    <string name="help_about_item">关于我们</string>
    <string name="change_account_title">切换账户</string>
    <string name="set_dialcountry_code">默认国家号设置</string>
    <string name="dialcountry_country_code_inform">提示：当您在拨打电话时未加国家号码，将会自动在您拨打的号码前添加默认国家号。</string>
    <string name="bind_number_inform">提示：通过设置回拨号码，使用回拨功能时将会回拨绑定的号码</string>
    <string name="is_auto_launch">是否开机启动?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="is_auto_login">登录设置</string>
    <string name="auto_login_rbtn_title">自动登录</string>
    <string name="manual_login_rbtn_title">手动登录</string>
    <string name="logout_messge">点击确定注销登录并退出</string>
    <string name="exit">确定要退出程序？</string>
    <string name="add_contact">添加联系人</string>
    <string name="add_new_contact_item">添加新联系人</string>
    <string name="add_exist_contact_item">添加现有联系人</string>
    <string name="no_sms_number">无号码，请重新选择</string>
    <string name="invite_message">使用安中通直拨中国，最低只要3分钱每分钟,点击 *** 下载安装</string>
    <string name="choose_sms_number">请选择号码</string>
    <string name="pls_input_phone">请输入电话号码</string>
    <string name="set_bind_number_title">设置回拨号码</string>
    <string name="set_bind_number_message">回拨号码：</string>
    <string name="set_bind_number_success">回拨号码设置成功！</string>
    <string name="get_bind_country_message">国家号：</string>
    <string name="setup_popwin_title">启动方式设置</string>
    <string name="invite_friend_title">分享</string>
    <string name="select_phone_to_invite">请选择***的号码：</string>
    <string name="dia_preference_title">拨号方式设置</string>
    <string name="choose_direct_dial">固定选择直拨</string>
    <string name="choose_back_dial">固定选择回拨</string>
    <string name="manual_choose_dial">手动选择直拨或回拨</string>
    <string name="back_call_preference">回拨自动接听设置</string>
    <string name="back_call_auto">自动接听</string>
    <string name="back_call_manual">手动接听</string>
    <string name="cancel">取   消</string>
    <string name="ok">确   定</string>
    <string name="account_regist">用户注册</string>
    <string name="step2">第二步</string>
    <string name="input_auth_code_inform">输入验证码，点击下一步注册</string>
    <string name="regist_step2_hint">输入验证码</string>
    <string name="auth_code">验证码：</string>
    <string name="next">下一步</string>
	<string name="input_ur_email">输入您的电子邮箱地址</string>
	<string name="email_modify_desc">如果您更改了邮箱地址，您需要对邮箱地址重新进行验证。</string>
	<string name="save">保存</string>
	<string name="modify_email">修改邮箱</string>
	<string name="send_money_gain_mail">发送领取话费邮件</string>
	<string name="email_unverified">邮箱未验证</string>
</resources>