<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/account_setting_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/account_regist"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center_vertical|left"
                android:text="@string/step2"
                android:textSize="25sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right|bottom"
                android:ellipsize="end"
                android:gravity="right"
                android:text="@string/input_auth_code_inform" >
            </TextView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_edityzm"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:gravity="center_vertical|right"
                android:text="@string/auth_code"
                android:textColor="@color/dark_dim_gray"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/auth_code_edittext"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/regist_step2_hint"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <Button
                android:id="@+id/next_btn"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/green_btn_bg"
                android:onClick="onVerifyAuthCodeAction"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>