<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/email_bind_input_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/textfield_selector"
                android:hint="@string/input_ur_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="4dp"
                android:paddingRight="4dp" />

            <TextView
                android:id="@+id/email_status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/email_unverified"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/email_bind_desc_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email_modify_desc"
                android:textColor="@color/dim_gray"
                android:textSize="15sp" />

            <Button
                android:id="@+id/email_bind_bt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_btn_bg"
                android:onClick="onSaveButtonClick"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/email_modify_bt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/gray_btn_bg"
                android:onClick="onModifyButtonClick"
                android:text="@string/modify_email"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/email_send_bt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/regist_btn_bg"
                android:onClick="onSendMoneyGainMailButtonClick"
                android:text="@string/send_money_gain_mail"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>