<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_transparent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/threequarters_transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="14dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/contactPhone_dialMode_select_titleTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contactPhone_dialMode_selectPopupWindow_titleTextView_text"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/contactPhone_dialMode_select_directdialBtn"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/contactPhone_dialMode_selectPopupWindow_directdialBtn_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:background="@drawable/btn_bg"
                android:textStyle="bold" />

            <Button
                android:id="@+id/contactPhone_dialMode_select_callbackBtn"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/contactPhone_dialMode_selectPopupWindow_callbackBtn_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:background="@drawable/btn_bg"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/contactPhone_dialMode_select_cancelBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="14dp"
            android:text="@string/contactPhone_dialMode_selectPopupWindow_cancelBtn_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>